--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,15 @@
 {
   "name": "contact-centre-backend",
   "version": "1.0.0",
+  "description": "Contact Centre knowledge base backend",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "body-parser": "^1.20.2",
-    "googleapis": "^121.0.0"
+    "cors": "^2.8.5",
+    "axios": "^1.6.0",
+    "googleapis": "^131.0.0"
   }
 }
